<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ElectroDJ</string>
    <string name="songListPrompt">Songs Found</string>
    <string name="musicControlCenter">Music Control Center</string>
    <string name="requestSong">Request a Song</string>
    <string name="search_for_songs">Search for Songs</string>
    <string name="sendRequest">Send Request</string>
    <string name="sendFailureTitle">Send Failure</string>
    <string name="sendMatchesFailureMessage">Failed to send possible song matches.</string>
    <string name="toggleListener">Listener Toggle</string>
    <string name="toggleListenerMessageOn">You are now listening for requests.</string>
    <string name="toggleListenerMessageOff">You are not listening for requests.</string>
    <string name="errorTitle">Error</string>
    <string name="songTitle">Song Title</string>
    <string name="songArtist">Artist</string>
    <string name="pauseSong">Pause</string>
    <string name="ipAddress">IP Address</string>
    <string name="listToBytesError">Conversion from object list to bytes has failed.</string>
    <string name="playSongError">Unable to play the requested song.</string>
    <string name="empty"></string>
    <string name="what_to_do">What would you like to do?</string>
    <string name="receive_requests">Receive Song Requests</string>
    <string name="send_a_request">Send a Song Request</string>
    <string name="enter_ip">Enter IP Address</string>
    <string name="connect">Connect</string>
    <string name="requestersLabel">Number of Requesters:</string>
    <string name="warning">Warning</string>
    <string name="unknownRequester">Received message from unknown requester: </string>
    <string name="connectionSuccessMsg">You have successfully connected to the DJ!</string>
    <string name="connectionSuccess">Connection Success</string>
    <string name="connectionFailed">Connection Failed</string>
    <string name="connectionFailedMsg">The DJ is not accepting requests at this time.</string>
    <string name="connectionFailedMsg2">One of the following has occurred: \n1. The DJ is not accepting requests at this time \n2. The IP address is incorrect \n3. You cancelled the connection</string>
    <string name="ok">OK</string>
    <string name="connectionLost">Connection Lost</string>
    <string name="connectionLostMsg">The DJ has disconnected.</string>
    <string name="requesterDefaultCount">0</string>
    <string name="deviceAddressLabel">IP Address:</string>
    <string name="noSongsFound">No Songs Found</string>
    <string name="noSongsFoundMsg">No songs were found that matched your search criteria.</string>
    <string name="playSong">Play</string>
    <string name="limitReachedMsg">You have reached your request limit. You must wait until the current song finishes
        playing before sending any more requests.
    </string>
    <string name="player">Music Player</string>
    <string name="requestList">Request List</string>
    <string name="goToPlayer"><![CDATA[<- Music Player]]></string>
    <string name="goToRequests"><![CDATA[Requests ->]]></string>
    <string name="emptyList">No Requests</string>
    <string name="skipSong">Skip</string>
    <string name="restartSong">Restart</string>
    <string name="stopSong">Stop</string>
    <string name="zero">0:00</string>
    <string name="placeholderTime">4:25</string>
    <string name="currentSong">Current Song Playing</string>
    <string name="requestAccepted">Request Accepted</string>
    <string name="requestAcceptedMsg">You have successfully sent the request! You have %d request(s) remaining.</string>
    <string name="loading">Loading…</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="move_indicator">Move Indicator</string>
    <string name="delete">Delete Image</string>
    <string name="exitMsg">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="forceClose">Application Crashed</string>
    <string name="forceCloseMsg">The application has unexpectedly crashed. A report has already been sent to the administrator.</string>
    <string name="notOnWifi">Not Connected to Wi-Fi</string>
    <string name="notOnWifiMsgListen">You must be connected to Wi-Fi to start listening for requests.</string>
    <string name="notOnWifiMsgConnect">You must be connected to Wi-Fi before attempting to connect to another device.
    </string>
    <string name="search_instructions">Enter partial info or leave blank to search all</string>
    <string name="splashScreen">Splash Screen</string>
    <string name="config_icon">Config Icon</string>
    <string name="config">Settings</string>
    <string name="max_requests">Max Requests Allowed Per Requester:</string>
    <string name="defaultRequestCount">10</string>
    <string name="notPaidAppMsg">You must have the paid version of the app to use this feature.</string>
    <string name="notPaidApp">Feature Not Available</string>
    <string name="auto_play_config">Autoplay Song Requests</string>
    <string name="config_save_button">Save</string>
    <string name="settingsSaved" type="id">Save Successful</string>
    <string name="settingsSavedMsg" type="id">You have successfully saved your settings.</string>
    <string name="configUpdated">Configuration Updated</string>
    <string name="configUpdatedMsg">The DJ updated the configuration. You now have {0} requests left.</string>
</resources>
