<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musicControlCenter"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal|top"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggleListener"
            android:id="@+id/listenerToggle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="98dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pauseSong"
            android:id="@+id/pauseButton"
            android:enabled="false"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/listenerToggle"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deviceAddressLabel"
            android:id="@+id/deviceAddressLabel"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            android:layout_below="@id/pauseButton"/>

    <TextView
            android:id="@+id/deviceAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="25dp"
            android:layout_below="@+id/deviceAddressLabel"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requestersLabel"
            android:id="@+id/requestersLabel"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            android:layout_below="@id/deviceAddress"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requesterDefaultCount"
            android:id="@+id/requesterCount"
            android:layout_centerHorizontal="true"
            android:textSize="18dp"
            android:layout_below="@id/requestersLabel"/>
</RelativeLayout>