<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal|top"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="98dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/buttonsLayout">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stopButton"
                android:enabled="false"
                android:src="@drawable/stop_icon"
                android:contentDescription="@string/stopSong"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pauseButton"
                android:enabled="false"
                android:src="@drawable/pause_icon"
                android:contentDescription="@string/pauseSong"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/skipButton"
                android:enabled="false"
                android:src="@drawable/skip_icon"
                android:contentDescription="@string/skipSong"/>
    </LinearLayout>

    <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/seekBarLayout"
            android:layout_below="@+id/buttonsLayout"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/zero"
            android:id="@+id/currentTime"
            android:layout_marginLeft="5dp"
            android:textSize="20dp"/>
        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/currentTime"
            android:layout_toLeftOf="@+id/totalTime"
            android:enabled="false"
            android:max="1"
            android:id="@+id/songSeekBar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/zero"
            android:id="@+id/totalTime"
            android:layout_marginRight="5dp"
            android:textSize="20dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentSong"
                android:id="@+id/currentSongLabel"
                android:textSize="20dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/songSeekBar"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:id="@+id/currentSong"
                android:layout_centerHorizontal="true"
                android:textSize="15dp"
                android:layout_below="@+id/currentSongLabel"/>
    </RelativeLayout>

</RelativeLayout>