<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_ip"
            android:id="@+id/connectTitle"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal|top"/>

    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/ipAddress"
            android:hint="@string/ipAddress"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:layout_below="@+id/connectTitle"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:id="@+id/connect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/ipAddress"/>

    <include layout="@layout/loading_image_container"/>

</RelativeLayout>