<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_for_songs"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal|top"/>

    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/songTitle"
            android:hint="@string/songTitle"
            android:gravity="center_horizontal"
            android:layout_alignLeft="@+id/songArtist"
            android:layout_alignParentTop="true"
            android:layout_marginTop="98dp"/>

    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/songArtist"
            android:hint="@string/songArtist"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="149dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_for_songs"
            android:id="@+id/searchButton"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/songArtist"/>

    <include layout="@layout/loading_image_container"/>

</RelativeLayout>