<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/lib/com.doleh.Jukebox">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requestSong"
            android:id="@+id/requestSongTitle"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal|top"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:prompt="@string/songListPrompt"
            android:id="@+id/songListSpinner"
            android:layout_below="@+id/requestSongTitle"
            android:layout_marginTop="@dimen/request_song_header_margin"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendRequest"
            android:id="@+id/requestButton"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/songListSpinner"
            android:layout_marginTop="@dimen/bottom_button_margin"/>

    <include layout="@layout/loading_image_container"/>

    <!--<com.google.android.gms.ads.AdView android:id="@+id/bottomBanner"-->
                                       <!--android:layout_width="wrap_content"-->
                                       <!--android:layout_height="wrap_content"-->
                                       <!--android:layout_alignParentBottom="true"-->
                                       <!--android:layout_centerHorizontal="true"-->
                                       <!--ads:adUnitId="@string/banner_request_song"-->
                                       <!--ads:adSize="SMART_BANNER"/>-->

</RelativeLayout>