<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_to_do"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal|top"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/receive_requests"
            android:id="@+id/receive_requests"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="98dp"
            android:src="@drawable/receive_requests"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive_requests"
            android:textSize="20dp"
            android:id="@+id/receive_requests_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/receive_requests"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/send_a_request"
            android:id="@+id/send_a_request"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/receive_requests_text"
            android:src="@drawable/send_requests"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_a_request"
            android:textSize="20dp"
            android:id="@+id/send_a_request_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/send_a_request"/>

</RelativeLayout>