<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/startupLayout">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_to_do"
            android:id="@+id/startupTitle"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal|top"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/startupTitle"
            android:visibility="invisible"
            android:id="@+id/divider"/>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/divider"
            android:layout_marginRight="@dimen/startup_button_padding"
            android:layout_marginTop="@dimen/header_margin"
            android:layout_below="@id/startupTitle">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/receive_requests"
                android:id="@+id/receive_requests"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/startupTitle"
                android:src="@drawable/receive_requests"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_requests"
                android:textSize="@dimen/startup_label_size"
                android:id="@+id/receive_requests_text"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/receive_requests"/>
    </RelativeLayout>

    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/startupTitle"
                    android:layout_marginLeft="@dimen/startup_button_padding"
                    android:layout_marginTop="@dimen/header_margin"
                    android:layout_toRightOf="@id/divider">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/send_a_request"
                android:id="@+id/send_a_request"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/startupTitle"
                android:src="@drawable/send_requests"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_a_request"
                android:textSize="@dimen/startup_label_size"
                android:id="@+id/send_a_request_text"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/send_a_request"/>
    </RelativeLayout>

    <com.google.android.gms.ads.AdView android:id="@+id/bottomBanner"
                                       android:layout_width="wrap_content"
                                       android:layout_height="wrap_content"
                                       android:layout_alignParentBottom="true"
                                       android:layout_centerHorizontal="true"
                                       ads:adUnitId="@string/banner_startup"
                                       ads:adSize="SMART_BANNER"/>

</RelativeLayout>